// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0 snapshot 1`] = `
[
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 0,
          "line": 1,
        },
        {
          "col": 24,
          "line": 1,
        },
      ],
      "stderr": "",
      "stdout": "awesome
",
      "value": "- : unit = ()
",
    },
  },
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 2,
          "line": 3,
        },
        {
          "col": 28,
          "line": 3,
        },
      ],
      "stderr": "",
      "stdout": "",
      "value": "type say = Hello | Goodbye;
",
    },
  },
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 2,
          "line": 5,
        },
        {
          "col": 11,
          "line": 8,
        },
      ],
      "stderr": "Line 8, characters 2-5:
Warning 11 [redundant-case]: this match case is unused.
",
      "stdout": "",
      "value": "
- : say => unit = <fun>
",
    },
  },
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 2,
          "line": 10,
        },
        {
          "col": 11,
          "line": 10,
        },
      ],
      "stderr": "",
      "stdout": "",
      "value": "
let a: int = 1;
",
    },
  },
]
`;

exports[`1 snapshot 1`] = `
[
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 0,
          "line": 1,
        },
        {
          "col": 31,
          "line": 1,
        },
      ],
      "stderr": "",
      "stdout": "Another stdout
",
      "value": "
- : unit = ()
",
    },
  },
]
`;

exports[`2 snapshot 1`] = `
[
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 0,
          "line": 1,
        },
        {
          "col": 14,
          "line": 1,
        },
      ],
      "stderr": "",
      "stdout": "",
      "value": "
let a: ref(int) = {contents: 1};
",
    },
  },
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 16,
          "line": 1,
        },
        {
          "col": 29,
          "line": 1,
        },
      ],
      "stderr": "",
      "stdout": "1",
      "value": "
- : unit = ()
",
    },
  },
]
`;

exports[`3 snapshot 1`] = `
[
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 0,
          "line": 1,
        },
        {
          "col": 60,
          "line": 1,
        },
      ],
      "stderr": "",
      "stdout": "",
      "value": "
let factorial: int => int = <fun>;
",
    },
  },
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 62,
          "line": 1,
        },
        {
          "col": 74,
          "line": 1,
        },
      ],
      "stderr": "",
      "stdout": "",
      "value": "
- : int = 720
",
    },
  },
]
`;

exports[`4 snapshot 1`] = `
[
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 0,
          "line": 1,
        },
        {
          "col": 25,
          "line": 3,
        },
      ],
      "stderr": "",
      "stdout": "",
      "value": "
type tree = Leaf | Node(int, tree, tree);
",
    },
  },
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 2,
          "line": 5,
        },
        {
          "col": 62,
          "line": 8,
        },
      ],
      "stderr": "",
      "stdout": "",
      "value": "
let sum: tree => int = <fun>;
",
    },
  },
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 2,
          "line": 10,
        },
        {
          "col": 3,
          "line": 15,
        },
      ],
      "stderr": "",
      "stdout": "",
      "value": "
let myTree: tree =
  Node(1, Node(2, Node(4, Leaf, Leaf), Node(6, Leaf, Leaf)),
   Node(3, Node(5, Leaf, Leaf), Node(7, Leaf, Leaf)));
",
    },
  },
  {
    "kind": "Ok",
    "value": {
      "loc": [
        {
          "col": 2,
          "line": 17,
        },
        {
          "col": 13,
          "line": 17,
        },
      ],
      "stderr": "",
      "stdout": "",
      "value": "
- : int = 28
",
    },
  },
]
`;
